# vidtrim-streamlit

./: README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
vidtrim_streamlit/: streamlit_app.py
